wsclient now works with new data

--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -21,10 +21,14 @@
 <body>
 <h1>Hell yeah!</h1>
 
-<canvas id="graffa" width="255" height="255">
-  This text is displayed if your browser does not support HTML5 Canvas.
-</canvas>
-
+<div id="container">
+  <canvas id="graffa" width="255" height="255">
+    This text is displayed if your browser does not support HTML5 Canvas.
+  </canvas>
+  <div id="info">
+    
+  </div>
+</div>
 <p id="buttons">
 Kek plop
 <button onclick='reboot()'>Reboot</button>
