2d version works now. Moved a lot of code around

--- a/websocketclient.html
+++ b/websocketclient.html
@@ -2,14 +2,13 @@
 <head> 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
 <title> 
-Foo Bar
+WebNaali 2d
 </title> 
 
 <script type="text/javascript" src = global.js></script>
 
 <!-- code for 2d stuff -->
-<script type="text/javascript" src = canvasfx.js></script>
-
+<script type="text/javascript" src = 2d.js></script>
 
 <!-- websocket code -->
 <script type="text/javascript" src = sockket.js></script>
