--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -1,7 +1,7 @@
 <html> 
 <head> 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
-<title>Foo Bar</title> 
+<title>WebNaali 3d</title> 
 
 <!-- GLGE stuff --> 
 <script type="text/javascript" src="glge/glge_math.js"></script>
@@ -9,11 +9,14 @@
 <script type="text/javascript" src="glge/glge_input.js"></script>
 <script type="text/javascript" src="glge/glge_collada.js"></script>
 
+
+<scrpt type="text/javasript" src="global.js"></script>
+
 <!-- code for 3d stuff -->
 <script type="text/javascript" src="3d.js"></script>
 
 <!-- websocket code -->
-<!-- <script type="text/javascript" src = sockket.js></script> -->
+<script type="text/javascript" src="sockket.js"></script>
 
 
 </head>
