Both 2d and 3d clients work now

--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -10,10 +10,12 @@
 <script type="text/javascript" src="glge/glge_collada.js"></script>
 
 
-<scrpt type="text/javasript" src="global.js"></script>
+<!-- "global" stuff -->
+<script type="text/javascript" src="global.js"></script>
 
 <!-- code for 3d stuff -->
 <script type="text/javascript" src="3d.js"></script>
+
 
 <!-- websocket code -->
 <script type="text/javascript" src="sockket.js"></script>
