--- a/websocketclient.html
+++ b/websocketclient.html
@@ -24,6 +24,7 @@ This text is displayed if your browser does not support HTML5 Canvas.
 <p>
 Kek plop
 <button onclick='reboot()'>Reboot</button>
+<button onclick='addObject()'>add object!</button>
 <button onclick='stopAll()'>STOP!</button>
 </p>
 
