Added debug div. Made the canvas smaller so that it will fit better on my screen

--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -27,13 +27,16 @@
 <h1>Hell yeah!</h1>
 
 <div id="container">
-  <canvas id="graffa" width="510" height="510">
+  <canvas id="graffa" width="255" height="255">
     This text is displayed if your browser does not support HTML5 Canvas.
   </canvas>
   <div id="info">
     
   </div>
+  <br>
   <div id="fps"></div>
+  <br>
+  <div id="debug"></div>
 </div>
 <p id="buttons">
 Kek plop
