Commit before xmas, I mean refactorinhg. Apparently socket.js already parses json to js objects no need to use eval in entities.js... Sometimes I outsmart myself :P

--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -16,6 +16,8 @@
 <!-- code for 3d stuff -->
 <script type="text/javascript" src="3d.js"></script>
 
+<!-- code for EC's -->
+<script type="text/javascript" src="entities.js"></script>
 
 <!-- websocket code -->
 <script type="text/javascript" src="sockket.js"></script>
