EC system now works with naali ws server

--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -9,6 +9,8 @@
 <script type="text/javascript" src="glge/glge_input.js"></script>
 <script type="text/javascript" src="glge/glge_collada.js"></script>
 
+<!-- jQuery -->
+<script type="text/javascript" src="jquery-1.4.3.js"></script>
 
 <!-- "global" stuff -->
 <script type="text/javascript" src="global.js"></script>
