--- a/scenetest.html
+++ b/scenetest.html
@@ -35,10 +35,33 @@ window.onload = function() {
     lobby = new GLGE.Collada();
 
     lobby.setId("aula");
-    lobby.setDocument("http://localhost:8000/WebNaali/aula/aula.dae");
+    lobby.setDocument("http://localhost:8000/WebNaali/aula/aula_v8a.dae");
+    
+    //lobby.setDrawType(GLGE.DRAW_LINESTRIPS);
 
     lobby.setLoc(127, 127, 0);
-    scene.addObject(lobby);
+    scene.addCollada(lobby);
+
+    var ovi = new GLGE.Collada();
+
+    ovi.setId("Ovi");
+
+    ovi.setDocument("http://localhost:8000/WebNaali/man2.dae");
+    // var actions = ovi.addColladaAction();
+    // var actions= Mycollada.addColladaAction();
+    // Mycollada.setAction(actions[{collada clip id},{blendtime},{loop?});
+
+    // But since there aren’t that many exports that support animclips
+    // you can also define frames: 0-30 walk 31-91 ideal. Simply set
+    // the number of frames and start frame, ie to set the ideal:
+
+    // Mycollada.setFrames(60);
+    // Mycollada.setStartFrame(31,{blendtime},{loop?});
+    ovi.setFrames(60)
+    ovi.setStartFrame(1, 3, 1);
+
+    scene.addCollada(ovi);
+
 
     setId({id: 1});
 
