--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -3,25 +3,59 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
 <title>WebNaali 3d</title> 
 
-<!-- GLGE stuff --> 
-<script type="text/javascript" src="glge/glge_math.js"></script>
-<script type="text/javascript" src="glge/glge.js"></script>
-<script type="text/javascript" src="glge/glge_input.js"></script>
-<script type="text/javascript" src="glge/glge_collada.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_math.js"></script>
+<script type="text/javascript" src="glge/src/core/glge.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_event.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_quicknote.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_animatable.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_document.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_placeable.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_jsonloader.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_group.js"></script>
+<script type="text/javascript" src="glge/src/core/glge_messages.js"></script>
+<script type="text/javascript" src="glge/src/animation/glge_action.js"></script>
+<script type="text/javascript" src="glge/src/animation/glge_actionchannel.js"></script>
+<script type="text/javascript" src="glge/src/animation/glge_animationcurve.js"></script>
+<script type="text/javascript" src="glge/src/animation/glge_animationvector.js"></script>
+<script type="text/javascript" src="glge/src/animation/glge_animationpoints.js"></script>
+<script type="text/javascript" src="glge/src/geometry/glge_mesh.js"></script>
+<script type="text/javascript" src="glge/src/material/glge_material.js"></script>
+<script type="text/javascript" src="glge/src/material/glge_materiallayer.js"></script>
+<script type="text/javascript" src="glge/src/material/glge_multimaterial.js"></script>
+<script type="text/javascript" src="glge/src/material/glge_texture.js"></script>
+<script type="text/javascript" src="glge/src/material/glge_texturecamera.js"></script>
+<script type="text/javascript" src="glge/src/material/glge_texturecanvas.js"></script>
+<script type="text/javascript" src="glge/src/material/glge_texturecube.js"></script>
+<script type="text/javascript" src="glge/src/material/glge_texturevideo.js"></script>
+<script type="text/javascript" src="glge/src/renderable/glge_lod.js"></script>
+<script type="text/javascript" src="glge/src/renderable/glge_object.js"></script>
+<script type="text/javascript" src="glge/src/renderable/glge_text.js"></script>
+<script type="text/javascript" src="glge/src/renders/glge_renderer.js"></script>
+<script type="text/javascript" src="glge/src/scene/glge_camera.js"></script>
+<script type="text/javascript" src="glge/src/scene/glge_light.js"></script>
+<script type="text/javascript" src="glge/src/scene/glge_scene.js"></script>
+<script type="text/javascript" src="glge/src/extra/glge_particles.js"></script>
+<script type="text/javascript" src="glge/src/extra/glge_filter2d.js"></script>
+<script type="text/javascript" src="glge/src/extra/filters/glge_filter_glow.js"></script>
+<script type="text/javascript" src="glge/src/extra/filters/glge_filter_ao.js"></script>
+<script type="text/javascript" src="glge/src/extra/glge_collada.js"></script>
+<script type="text/javascript" src="glge/src/extra/glge_input.js"></script>
+<script type="text/javascript" src="glge/src/extra/glge_wavefront.js"></script>
+<script type="text/javascript" src="glge/src/physics/glge_physicsext.js"></script>
+<script type="text/javascript" src="glge/src/physics/glge_physicsabstract.js"></script>
+<script type="text/javascript" src="glge/src/physics/glge_physicsbox.js"></script>
+<script type="text/javascript" src="glge/src/physics/glge_physicsmesh.js"></script>
+<script type="text/javascript" src="glge/src/physics/glge_physicsplane.js"></script>
+<script type="text/javascript" src="glge/src/physics/glge_physicssphere.js"></script>
+<script type="text/javascript" src="glge/src/physics/glge_physicsconstraintpoint.js"></script>
 
 <!-- jQuery -->
-<script type="text/javascript" src="jquery-1.4.3.js"></script>
+<script type="text/javascript" src="jquery/jquery-1.6.1.js"></script>
 
-<!-- "global" stuff -->
 <script type="text/javascript" src="global.js"></script>
-
-<!-- code for 3d stuff -->
 <script type="text/javascript" src="3d.js"></script>
-
-<!-- code for EC's -->
 <script type="text/javascript" src="entities.js"></script>
 
-<!-- websocket code -->
 <script type="text/javascript" src="sockket.js"></script>
 
 
