Chat now fully operational (atleast the core stuff)

--- a/scenetest.html
+++ b/scenetest.html
@@ -78,7 +78,7 @@ window.onload = function() {
     lobby = new GLGE.Collada();
 
     lobby.setId("aula");
-    lobby.setDocument("majbacka/livingroom__day.dae");
+    lobby.setDocument("aula2_rmx.dae");
     
     lobby.setLoc(0, 0, 0);
     scene.addCollada(lobby);
