--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -75,6 +75,12 @@
   <br>
   <div id="debug"></div>
   <div id="chat"></div>
+  <div id="chatinput">
+    <form id="chatinput" action="">  
+        <input type="text" id="usermsg" size="80" />  
+        <input type="submit" id="sendmsg" value="Send"/>  
+    </form>
+</div>
 </div>
 <p id="buttons">
 Kek plop
