--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -61,30 +61,20 @@
 </head>
 
 <body>
-<h1>Hell yeah!</h1>
+<h1>WebNaali 3d client</h1>
 
 <div id="container">
-  <canvas id="graffa" width="255" height="255">
+  <canvas id="graffa" width="640" height="640">
     This text is displayed if your browser does not support HTML5 Canvas.
   </canvas>
-  <div id="info">
-    
-  </div>
   <br>
-  <div id="fps"></div>
-  <br>
-  <div id="debug"></div>
   <div id="chat"></div>
   <div id="chatinput">
     <form id="chatinput" action="">  
-        <input type="text" id="usermsg" size="80" />  
+        <input type="text" id="usermsg" size="60" />  
         <input type="submit" id="sendmsg" value="Send"/>  
     </form>
 </div>
-</div>
-<p id="buttons">
-Kek plop
-<button onclick='reboot()'>Reboot</button>
 </p>
 
 </body>
