Added some "configuration options"

--- a/ws3dclient.html
+++ b/ws3dclient.html
@@ -52,12 +52,20 @@
 <!-- jQuery -->
 <script type="text/javascript" src="jquery/jquery-1.6.1.js"></script>
 
+<!-- "Settings" -->
+<script type="text/javascript">
+//Load the static scene here
+url_to_static = "aula2_rmx.dae";
+websocket_host = "127.0.0.1"
+websocket_port = "9999";
+</script>
+
+
 <script type="text/javascript" src="global.js"></script>
 <script type="text/javascript" src="3d.js"></script>
 <script type="text/javascript" src="entities.js"></script>
 
 <script type="text/javascript" src="sockket.js"></script>
-
 </head>
 
 <body>
